--- a/sass_import.html
+++ b/sass_import.html
@@ -10,9 +10,8 @@
 
 <h1 class="main_heading">SASS Import</h1>
 
-<div class="bluebox">box one</div>
+<div class="bluebox">box one added content</div>
 <div class="pinkbox">box two</div>
-<div class="wide-box">box three</div>
 
 </body>
 </html>
